--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -15,10 +15,33 @@
   }
 }
 
+/* Animation*/
+
+
+@keyframes marquee {
+  0%   { transform: translateX(0); }
+  100% { transform: translateX(-50%); }
+}
+
+.animate-marquee {
+  display: flex;
+  width: max-content;
+  animation: marquee 25s linear infinite;
+}
 /* IMPORTANT : ne PAS fixer de font-family ici.
    Laisse Next Font (Inter) s’appliquer via className sur <body>. */
 
 body {
   background: var(--background);
   color: var(--foreground);
+}
+
+
+/* Masque les scrollbars horizontales */
+.scrollbar-hide::-webkit-scrollbar {
+  display: none;
+}
+.scrollbar-hide {
+  -ms-overflow-style: none;  /* IE et Edge */
+  scrollbar-width: none;     /* Firefox */
 }
